lab1/Test/L1-A-3-4.output
Error Type B at Line 2
Error Type A at Line 6
Error Type A at Line 35
Error Type B at Line 42
Error Type A at Line 43
Error Type B at Line 43
Error Type A at Line 47
Error Type B at Line 51
