lab1/Test/L1-A-3-4.cmm
int ;
float _INbHKf , acmxFl_EGf , , Gc 


;
#int SE52F9FavqaTKgAAb9em ( ) {
  float XWy0z = - ! ! QbfPIwVcywfS_5LRne / twG130sDZsyt5BQL 
    ( ) - ! xQdwQdN7Ue51YoH / XJxDM - G ( ) >= ( warsQBaiW 
    ) - ZdN - MJYMspLPLBn - Pj_uy2AqSmV - vHYiNgGrVDaxw2LTeGXj 
    - k7ghxI_sGxpcg <= - _xgvyRP7UO4 * iJWP < - TCE <= 
    OvMc97l ( fDz ) * nKoU + Fi8MERxiNHkjpNTXZ - VVcFfAUTWt3T 
    - HK + BR6mc - PVp - KBc0Vrm_RwxoQyMn7l >= - Axo * 
    SyKMMkSGA / skI * _czkfCsuo / fqMoNi6q2kNa * EfXo_Eh 
    * CiJO3vltfc / dIBVS3wbVhjyyJVO * rZKCX31 >= - yDOu1WiNtCzpoH 
    + xkYGBGtP9vCz5 + GZkzk0WHuX8 + uCFyKyQ9qT_qEcXCKR9Y 
    + a0chwNwTx + cOdbzk5sA2e2cWmH8K5 + YMOjt0eILpw + 
    b_D1aoWh65q8XEkTwF - a - Ic3on62xGd4zqVUm >= ! VnV4 
    * zcnfRjKlK4p_v6mHLrL - b0vetOgp3a <= ! SvH74wO8GHDvdqDUx 
    / d2mraDse7 * SUL0Tek3H1J_hSj * _htbeF91e * C * IYjw8FwnFRQtsju 
    - txgtHb69cF7n8X + wJ3nwco9xF0 - f_za + uXjdQxq0qbnWMsj5PFdL 
    - c7Fk52oHcGZ - O5YyINfyu + cc9ygOmsuUHJfiS3 + P1U2Uta 
    - kQIoryOj_gHuR != ! dd57rGo4Kkgulpzp + The2sMjdWcM0A1 
    + pqOg6o - yC - aAqPeJ - nVnIsYk < - L3AEQLQ / uU4Z_HKNNNZ7HRKRuyeh 
    / An * hO + kAZ >= ! Vnv54 / BTkHDDiN / YH - bOltREtCp2RrrWqplnY 
    >= XrbAh9aB9LIHPPXQdBL ( ) [ JnmJcDafua ] - OwbMiKgh 
    > ! Z3cSGJGq / HdbZLH9S6vy3uJt0 / R_Xux * YanAJsaNoMK 
    / bkWH8ClvuuHHnjA / RLf6M9C * fRPz3jop2N5lJJPH < Cc 
    ( ) || HXPR4tLnH0wUzSt6QD93 ( ) [ TsNq3xUz ] * BpKwLIa 
    * O6u / UwOD * QkPOWG / _ - fOw09ulwa - K29PH - A8vySFsHKSdZ3iLO14 
    <= _eXVWvAl62aZPmwQ == WIbqgd8JOaUk31fC >= b5IQlXIILRJQCNE_ 
    == zpcLcTFNek && e0z && HR6KyS519APIqo2y0jd && jsSqNaXOpGby2 
    && TjzOJ7dbXSVwGsGXK0M || ! Yuc7JQwvH * psCKzD_RWMZImr 
    / q3S3p / dprvXkZLCVkLGanmr / NPRrCrIqsjwPcB8G / sE0u8J 
    * TdMhx5fvEHlHvk / MtJ7BZ / kF + UsQ2cExtuta8LC1f0bYo 
    == F ^&& QVAUAgU , K0Ft18S = - yiy1LL = P9rqbMRRa5 
    , RuZLdDB [ 52468492 ] [ 1607907025 ] = CUR1Y4wB2pcfevDSBpTO 
    ;
  if ( ! - ( gQa3Mn1uAQiZbp1df ) = M47 ( sp8TnZZByide28RC9 
    ) + Bdtd49cmh9a > FvELXa0foKuPR >= mh >= ahCt71hRC3Rbri 
    == SYEoV5uEGptq == dz0WNZbKyCa < H <= be9EhTL71WG 
    != oCBmK == ohB2tUCm77pa != devUOmGLjWe52VbdWg2 || 
    ldf_zfT8qumt )   return j0RL2Y97s ;[ 
else %  if ( Yv8Pyc3KlOqdsT7 )   DZ1q ( ;


  ! ! - j4NF37GXc ( ) = - MfOOgzhUwWLpgKMdfo ( _6GNnhICU4Zcacbu 
    ) [ NFN7P33 ] \. ixtfp9wb3WN . QTiFMGqrO5 / sQbaDhTR2RtY5BO2qk 
    / OAPZK2J4y / r0I - EaM5 <= HvIoXX5w2_ < MIHIqW < 
    M4W2BQrykpJ6U < aalsECr < _n_ZLT != Sz7H9kZ && W9TQdA3FfrUIuGs9pm1l 
    && mdXVRU548c9zVMzMLp ;
< }
